# wa-law-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml  test_content_scraper.py  test_registry.py
.context/: best_practices.md  features.md  plan.md  specifications.md
.devcontainer/: devcontainer.json
data/raw_html/rcw/1/: title_1.html  title_1_disposition.html
data/raw_html/rcw/10/: title_10.html  title_10_disposition.html
data/raw_html/rcw/11/: title_11.html  title_11_disposition.html
data/raw_html/rcw/12/: title_12.html  title_12_disposition.html
data/raw_html/rcw/13/: title_13.html  title_13_disposition.html
data/raw_html/rcw/14/: title_14.html  title_14_disposition.html
data/raw_html/rcw/15/: title_15.html  title_15_disposition.html
data/raw_html/rcw/16/: title_16.html  title_16_disposition.html
data/raw_html/rcw/17/: title_17.html  title_17_disposition.html
data/raw_html/rcw/18/: title_18.html  title_18_disposition.html
data/raw_html/rcw/19/: title_19.html  title_19_disposition.html
data/raw_html/rcw/2/: title_2.html  title_2_disposition.html
data/raw_html/rcw/20/: title_20.html  title_20_disposition.html
data/raw_html/rcw/21/: title_21.html  title_21_disposition.html
data/raw_html/rcw/22/: title_22.html  title_22_disposition.html
data/raw_html/rcw/23/: title_23.html  title_23_disposition.html
data/raw_html/rcw/23B/: title_23B.html  title_23B_disposition.html
data/raw_html/rcw/24/: title_24.html  title_24_disposition.html
data/raw_html/rcw/25/: title_25.html  title_25_disposition.html
data/raw_html/rcw/26/: title_26.html  title_26_disposition.html
data/raw_html/rcw/27/: title_27.html  title_27_disposition.html
data/raw_html/rcw/28A/: title_28A.html  title_28A_disposition.html
data/raw_html/rcw/28B/: title_28B.html  title_28B_disposition.html
data/raw_html/rcw/28C/: title_28C.html  title_28C_disposition.html
data/raw_html/rcw/29A/: title_29A.html  title_29A_disposition.html
data/raw_html/rcw/29B/: title_29B.html  title_29B_disposition.html
data/raw_html/rcw/3/: title_3.html  title_3_disposition.html
data/raw_html/rcw/30A/: title_30A.html  title_30A_disposition.html
data/raw_html/rcw/30B/: title_30B.html  title_30B_disposition.html
data/raw_html/rcw/31/: title_31.html  title_31_disposition.html
data/raw_html/rcw/32/: title_32.html  title_32_disposition.html
data/raw_html/rcw/33/: title_33.html  title_33_disposition.html
data/raw_html/rcw/34/: title_34.html  title_34_disposition.html
data/raw_html/rcw/35/: title_35.html  (+1 more)
data/registry/: rcw_registry_20250731_141539.yaml  wac_registry_20250731_141539.yaml
docs/: README.md  build.sh  getting-started.md  index.md
docs/jupyter-book/: _config.yml  _toc.yml
docs/mkdocs/: mkdocs.yml
docs/shared/: contributing.md  getting-started.md
docs/shared/api/: index.md
docs/shared/examples/: index.md
docs/shared/notebooks/: advanced.ipynb  tutorial.ipynb  workflow.ipynb
src/wa_law_scraper/: __init__.py  cli.py  models.py  registry.py
src/wa_law_scraper/cloudflare/: __init__.py  agent.py  proxy.py
src/wa_law_scraper/scripts/: __init__.py  registry.py  scraper.py
test_data/registry/: test_registry_20250731_194320.yaml
(+55084 files in other folders)
